<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/callTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="@dimen/_5dp"
                android:padding="@dimen/_10dp"
                android:text="@string/phone_call"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/callBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:gravity="center"
                android:text="@string/sure_to_call"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/callNoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40dp"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/rounded_button_no"
                    android:text="@string/no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sp" />

                <Button
                    android:id="@+id/callYesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40dp"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
