<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainScreen.MainScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/phoneCall"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_90dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_16dp"
            android:padding="@dimen/_5dp"
            android:background="@drawable/rounded_button"
            android:drawableBottom="@drawable/phone"
            android:text="@string/phone_call"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sp" />

        <Button
            android:id="@+id/message"
            android:layout_width="@dimen/_160dp"
            android:padding="@dimen/_5dp"
            android:layout_height="@dimen/_90dp"
            android:layout_marginRight="@dimen/_16dp"
            android:background="@drawable/rounded_button"
            android:drawableBottom="@drawable/message"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/googleMaps"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_90dp"
            android:padding="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_16dp"
            android:background="@drawable/rounded_button"
            android:drawableBottom="@drawable/maps"
            android:text="@string/google_map"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sp" />

        <Button
            android:id="@+id/storage"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_90dp"
            android:padding="@dimen/_5dp"
            android:layout_marginRight="@dimen/_16dp"
            android:background="@drawable/rounded_button"
            android:drawableBottom="@drawable/storage"
            android:text="@string/storage"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sp" />
    </LinearLayout>

</LinearLayout>